[tool.poetry]
name = "hslproxy"
version = "0.2.0"
description = "Simple HTTP proxy to get list of departures for a bus stop from the HSL API."
authors = ["Olli Wilkman <olli.wilkman@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7"
uvicorn = "^0.15"
fastapi = "^0.68"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
